# avr-template

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  time_it.rs
