[package]
name = "template-bin"
version = "0.1.0"
authors = ["Yossi <josiphaboic@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
panic-halt = "0.2.0"
nb = "1.0.0"
embedded-hal = "0.2.5"
avr-device = "0.3.1"
ufmt = '0.1.0'
volatile-register = "0.2.0"
avr-progmem = "0.1.2"
ssd1306 = "0.7.0"
serde-json-core = "0.4.0"
micromath = "*"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "ac72adbe6db8900c41681b759ff62a11f2915916"
features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]